src/components/Editor.css
.Editor-header {
	display: flex;
	justify-content: space-between;
	margin-bottom: 0;
}

.Editor-tabs {
	list-style: none;
	padding: 0;
	margin: 0;
	display: flex;
}

.Editor-tabs input {
	display: none;
}

.Editor-tabs label {
	all: unset;
	cursor: pointer;
	/*font: inherit;*/
	/*color: inherit;*/
}

.Editor-tabs li:first-child label span {
	margin-right: 0;
	border-right: 0;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
}

.Editor-tabs li:last-child label span {
	margin-right: 0;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

.Editor-tabs label input:checked + span {
    color: #fff;
    background: #504C4C;
    border: 1px solid #504C4C;
}

.Editor-toolbar {
	display: flex;
	list-style: none;
	padding: 0;
	margin: 0;
}

.Editor-toolbar button {}
.Editor-toolbar button:first-child:not(:last-child ) {
	margin-right: 0;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	border-right: none;
}

.Editor-toolbar button + button:not(:last-child ) {
	border-radius: 0;
	margin-right: 0;
	border-right: none;
}

.Editor-toolbar button:last-child:not(:first-child) {
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}
	/*background: transparent;
	border: none;
	font: inherit;
	cursor: pointer;
	padding: 0.25rem 0.25rem;
	margin: -0.25rem 0;*/

.Editor-toolbar button:hover,
.Editor-toolbar button:active {
	color: #00a0d2;
}

.Editor-toolbar .separator {
	margin-left: 0.5rem;
}

.Editor-editor {
	margin-top: 0;
	margin-bottom: .833335rem;
	min-height: 5rem;
	max-height: 30rem;
	resize: vertical;

	/*border-top-left-radius: 0;*/
}

.Editor-submit {
	margin-top: .833335rem;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.Editor-submit .btn:last-child {
	margin-right: 0;
}

